src/test/ui/issue-34373.stderr
error[E0391]: cycle detected when processing `Foo::T`
  --> $DIR/issue-34373.rs:17:30
   |
LL | pub struct Foo<T = Box<Trait<DefaultFoo>>>;  //~ ERROR cycle detected
   |                              ^^^^^^^^^^
   |
note: ...which requires processing `DefaultFoo`...
  --> $DIR/issue-34373.rs:18:19
   |
LL | type DefaultFoo = Foo;
   |                   ^^^
   = note: ...which again requires processing `Foo::T`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
